--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 
   <link rel="stylesheet" href="styles.css">
 
-  <link rel="icon" href="images/short.png" type="image/png">
+  <link rel="icon" href="images/logos/short.png" type="image/png">
 
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fade-in" style="animation-delay: 0.1s;">
+<nav class="navbar navbar-expand-lg fade-in">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="images/short.png" alt="Errno Computer Technologies Club Logo" height="30">
+      <img src="images/logos/short.png" alt="Errno Computer Technologies Club Logo" height="30">
       Errno Computer Technologies Club
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,14 +49,14 @@
   <div class="hero-section">
     <div class="container text-center">
       <h1 class="display-4">Welcome to Errno Computer Technologies Club!</h1>
-      <p class="lead fade-in-up" style="animation-delay: 3.3s;">Exploring the world of computer technologies, one line of code at a time.</p>
-      <hr class="my-4 fade-in" style="animation-delay: 3.6s;">
-      <p class="fade-in-up" style="animation-delay: 3.9s;">Join us to learn, collaborate, and innovate.</p>
-      <a class="btn btn-primary btn-lg scale-in" href="#about" role="button" style="animation-delay: 4.2s;">Learn More</a>
+      <p class="lead fade-in-up">Exploring the world of computer technologies, one line of code at a time.</p>
+      <hr class="my-4 fade-in">
+      <p class="fade-in-up">Join us to learn, collaborate, and innovate.</p>
+      <a class="btn btn-primary btn-lg scale-in" href="#about" role="button">Join Us</a>
     </div>
   </div>
 
-  <div class="container fade-in-up" id="about" style="animation-delay: 4.7s;">
+  <div class="container fade-in-up" id="about">
     <div class="row">
       <div class="col-md-8 offset-md-2 text-center">
         <h2>About Us</h2>
@@ -67,35 +67,33 @@
     </div>
   </div>
 
-  <div class="leadership fade-in-up" id="leadership" style="animation-delay: 5.0s;">
+  <div class="leadership fade-in-up" id="leadership">
     <div class="container">
       <div class="row text-center mb-4">
-        <div class="col-12">
-          <h2>Leadership</h2>
-        </div>
+        <h2>Leadership</h2>
       </div>
-      <div class="row justify-content-center">
+      <div class="row justify-content-center text-center">
 
         <div class="col-md-4 col-sm-6 mb-4">
-          <img src="path/to/member1.jpg" alt="Team member image" class="img-fluid rounded-circle mb-2">
+          <img src="path/to/member1.jpg" alt="Team member image" class="img-fluid mb-2">
           <h4>Eryk Piasecki</h4>
           <p>President</p>
         </div>
 
         <div class="col-md-4 col-sm-6 mb-4">
-          <img src="path/to/member2.jpg" alt="Team member image" class="img-fluid rounded-circle mb-2">
+          <img src="images/photos/people/milosz_klim.jpg" alt="Team member image" class="img-fluid mb-2">
           <h4>Miłosz Klim</h4>
           <p>Vice President</p>
         </div>
 
         <div class="col-md-4 col-sm-6 mb-4">
-          <img src="path/to/member3.jpg" alt="Team member image" class="img-fluid rounded-circle mb-2">
+          <img src="images/photos/people/varvara_vonsovych.jpg" alt="Team member image" class="img-fluid mb-2">
           <h4>Varvara Vonsovych</h4>
           <p>Vice President</p>
         </div>
 
         <div class="col-md-4 col-sm-6 mb-4">
-          <img src="path/to/member4.jpg" alt="Team member image" class="img-fluid rounded-circle mb-2">
+          <img src="images/photos/people/wiktoria_bielecka.jpg" alt="Team member image" class="img-fluid mb-2">
           <h4>Wiktoria Bielecka</h4>
           <p>Public Relations Officer</p> </div>
 
@@ -103,35 +101,76 @@
     </div>
   </div>
 
-  <div class="project-showcase fade-in-up" id="projects" style="animation-delay: 5.5s;">
+  <div class="project-showcase fade-in-up" id="projects">
     <div class="container">
       <div class="row text-center mb-4">
         <div class="col-12">
           <h2>Our Projects</h2>
         </div>
       </div>
-      <div class="row">
+      <div class="row justify-content-center">
 
-        <div class="col-md-6 col-lg-4 mb-4">
-          <h3>SNS MINERWA</h3>
-          <p>Minerwa is a virtual shooting sports training system designed for high schools and elementary schools. Easy and safe way to learn/teach how to shoot a gun.</p>
+        <div class="col-md-8"> <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel">
+
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#projectCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#projectCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#projectCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+
+          <div class="carousel-inner">
+
+            <div class="carousel-item active">
+              <div class="card mx-auto bg-dark text-light text-center" style="max-width: 600px;">
+                <div class="project-image-container"> <img src="images/photos/projects/minerwa.jpg" alt="SNS MINERWA Project Image">
+                </div>
+                <div class="card-body">
+                  <h3>SNS MINERWA</h3>
+                  <p>Minerwa is a virtual shooting sports training system designed for high schools and elementary schools. Easy and safe way to learn/teach how to shoot a gun.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="carousel-item">
+              <div class="card mx-auto bg-dark text-light text-center" style="max-width: 600px;">
+                <div class="project-image-container"> <img src="images/photos/projects/labvr.png" alt="LAB VR Project Image">
+                </div>
+                <div class="card-body">
+                  <h3>LAB VR</h3>
+                  <p>It's an innovative classroom simulation where physics is an adventure, geology becomes an expedition, astronomy turns into a journey among the stars, and computer technology devices come to life in fascinating ways!</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="carousel-item">
+              <div class="card mx-auto bg-dark text-light text-center" style="max-width: 600px;">
+                <div class="project-image-container"> <img src="images/photos/projects/planetariumar.jpg" alt="PLANETARIUM AR Project Image">
+                </div>
+                <div class="card-body">
+                  <h3>PLANETARIUM AR</h3>
+                  <p>Planetarium AR is an innovative application designed to bring the wonders of the cosmos directly to your fingertips through the power of augmented reality technology. Users can embark on a journey through the Solar System.</p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <button class="carousel-control-prev" type="button" data-bs-target="#projectCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#projectCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
 
-        <div class="col-md-6 col-lg-4 mb-4">
-          <h3>LAB VR</h3>
-          <p>It's an innovative classroom simulation where physics is an adventure, geology becomes an expedition, astronomy turns into a journey among the stars, and computer technology devices come to life in fascinating ways!</p>
         </div>
-
-        <div class="col-md-6 col-lg-4 mb-4">
-          <h3>PLANETARIUM AR</h3>
-          <p>Planetarium AR is an innovative application designed to bring the wonders of the cosmos directly to your fingertips through the power of augmented reality technology. Users can embark on a journey through the Solar System.</p>
-        </div>
-
       </div>
     </div>
   </div>
 
-  <div class="container my-5 fade-in-up" id="contact" style="animation-delay: 6.0s;">
+  <div class="container my-5 fade-in-up" id="contact">
     <div class="row">
       <div class="col-md-8 offset-md-2 text-center">
         <h2>Contact Us</h2>
@@ -142,7 +181,7 @@
   </div>
 
 </main>
-<footer class="text-center fade-in" style="animation-delay: 6.3s;">
+<footer class="text-center fade-in">
   <div class="container">
     <p>&copy; 2025 Errno Computer Technologies Club. All Rights Reserved.</p>
   </div>
