--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#contact">Contact</a> </li>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.pl.html">PL</a>
+        </li>
       </ul>
     </div>
   </div>
@@ -52,7 +56,7 @@
       <p class="lead fade-in-up">Exploring the world of computer technologies, one line of code at a time.</p>
       <hr class="my-4 fade-in">
       <p class="fade-in-up">Join us to learn, collaborate, and innovate.</p>
-      <a class="btn btn-primary btn-lg scale-in" href="#about" role="button">Join Us</a>
+      <a class="btn btn-primary btn-lg scale-in" href="https://forms.office.com/e/iyuAtBVd1R" role="button">Join Us</a>
     </div>
   </div>
 
