--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="row justify-content-center text-center">
 
         <div class="col-md-4 col-sm-6 mb-4">
-          <img src="path/to/member1.jpg" alt="Team member image" class="img-fluid mb-2">
+          <img src="images/photos/people/eryk_piasecki.png" alt="Team member image" class="img-fluid mb-2">
           <h4>Eryk Piasecki</h4>
           <p>President</p>
         </div>
