--- a/index.pl.html
+++ b/index.pl.html
@@ -68,12 +68,12 @@
     <div class="leadership fade-in-up" id="leadership">
         <div class="container">
             <div class="row text-center mb-4">
-                <h2>Liderzy</h2>
+                <h2>Zarząd</h2>
             </div>
             <div class="row justify-content-center text-center">
 
                 <div class="col-md-4 col-sm-6 mb-4">
-                    <img src="path/to/member1.jpg" alt="Zdjęcie członka zespołu" class="img-fluid mb-2">
+                    <img src="images/photos/people/eryk_piasecki.png" alt="Zdjęcie członka zespołu" class="img-fluid mb-2">
                     <h4>Eryk Piasecki</h4>
                     <p>Prezes</p>
                 </div>
